# chalcedony

./: $  '  .gitignore  Cargo.toml  Makefile  README.md  grammar.ebnf
examples/: branching.ch  branching_test.ch  classes.ch  ctrl_flow.ch  dijkstra.ch  exceptions.ch  fib.ch  fizzbuzz.ch  iter.ch  list.ch  math.ch  overloading.ch  palindrome.ch  primes.ch  pyramid.ch  state.ch  test.ch  tests.ch  tuesfest.ch
src/: lib.rs  main.rs  mocks.rs
src/common/: bytecode.rs  mod.rs  operators.rs  types.rs
src/error/: color.rs  error.rs  internal.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
src/error/format/: color.rs  mod.rs
src/error/internal/: mod.rs
src/error/lexer/: mod.rs
src/error/parser/: mod.rs
src/error/scopes/: compile.rs  internal.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
src/error/span/: mod.rs  pos.rs  span.rs  spanning.rs
src/errors/: mod.rs
src/errors/format/: color.rs  mod.rs  output.rs
src/errors/lexer/: mod.rs
src/errors/lexer_errors/: mod.rs
src/errors/parser/: mod.rs
src/errors/span/: mod.rs  pos.rs  span.rs
src/interpreter/: mod.rs  type_eval.rs
src/interpreter/codegen/: class.rs  expr.rs  func.rs  mod.rs  stmnt.rs  var.rs
src/lexer/: char_reader.rs  lexer.rs  line.rs  mod.rs  reader.rs  token_reader.rs  tokens.rs
src/mir/: mod.rs
src/parser/: line_reader.rs  mod.rs  parser.rs  token_reader.rs
src/utils/: bytecode.rs  mod.rs  ptr_array.rs  ptr_string.rs  reader.rs  stack.rs
src/vm/: error.rs  mod.rs  object.rs  test.rs
tests/: codegen.rs  cvm.rs  lexer.rs  parser.rs
utils/syntax/: chal.vim
(+36 files in other folders)
