[package]
name = "chalcedony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

# for more detailed flamegraphs
[profile.release]
debug = true
# for some reason opt-level 2 is currently faster than 3
opt-level = 3
