[package]
name = "chalcedony"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
ahash = "0.8.7"
itertools = "0.12.1"

[features]
testing = ["panicking-asserts"]
panicking-asserts = []

# for more detailed flamegraphs
[profile.release]
debug = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
